# agent-packaging-standard

./: .gitignore  404.html  =0.0.9  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  aps_pull.rtf  index.html  mkdocs.yml  output.txt  requirements.txt  sitemap.xml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: gh-pages.yml
APS_EXECUTION_ENV/: index.html
RUNTIME_EXTENSIONS/: index.html
SECURITY/: index.html
SECURITY/provenance/: index.html
SECURITY/signing/: index.html
SECURITY/signing-model/: index.html
architecture/: index.html
briefs/landscape/: index.html
briefs/positioning/: index.html
cli/: README.md  pyproject.toml
cli-dev/: index.html
cli/reference/: index.html
cli/src/aps_cli/: _init_.py  agent-packaging-standard.code-workspace  app.py  pyproject.toml  schema_min.py  signing.py
cli/src/aps_cli.egg-info/: SOURCES.txt
cli/src/aps_cli/templates/: aps-manifest.yaml
cli/src/aps_cli/templates/echo_agent/: AGENT_CARD.md
cli/src/aps_cli/templates/echo_agent/aps/: agent.yaml
cli/src/aps_cli/templates/echo_agent/src/echo/: main.py
cli/tests/: REGISTRY_TEST.md  __init__.py  conftest.py  manual_registry_test.sh  test_e2e_workflow.py  test_rag_smoke.py  test_registry_resolver.py  test_run_stream_and_timeout.py  test_sign_verify.py  test_wrap_request.py
contributing/: index.html
dev-setup/: index.html
docs/: APS_EXECUTION_ENV.md  CNAME  RUNTIME_EXTENSIONS.md  SECURITY.md  architecture.md  cli-dev.md  contributing.md  dev-setup.md  faq.md  getting-started.md  hacking-guide.md  index.md  publish.md  registry-dev.md  registry.md  roadmap.md  security-provenance.md  stack.md  testing.md
docs/briefs/: landscape.md  positioning.md
docs/cli/: reference.md
docs/examples/: index.md
docs/ops/: GOVERNANCE.md  publish.md
docs/registry/: api.md
docs/security/: provenance.md  signing-model.md  signing.md
docs/spec/proposals/: 000-template.md
docs/specs/: APS-v0.1.md  errors.md  manifest-schema.json  runtime.md  streaming.md
docs/standards/: agent-card-template.md  governance.md  mapping.md  stack.md
examples/: index.html  main.py
examples/echo-agent/: README.md  requirements.txt
examples/echo-agent/aps/: agent.yaml
examples/error-agent/: agent.yaml
examples/rag-agent/: README.md  requirements.txt
examples/rag-agent/aps/: agent.yaml
examples/rag-agent/assets/: sample.txt
examples/rag-agent/docs_src/: sample.txt  test.txt
examples/tools-calc-agent/: README.md
examples/tools-calc-agent/aps/: agent.yaml
faq/: index.html
getting-started/: index.html
hacking-guide/: index.html
interop/agp/: gateway.py
interop/mcp/: aps_mcp_wrapper.py
interop/tdf/: export_tdf.py
my-agent/: README.md
new-agent/: AGENT_CARD.md
new-agent/aps/: agent.yaml
new-agent/src/simple/: main.py
ops/publish/: index.html
publish/: index.html
registry/: index.html  pyproject.toml
registry-dev/: index.html
registry/api/: index.html
registry/src/aps_registry/: server.py  store.py
registry/src/aps_registry.egg-info/: SOURCES.txt  requires.txt
registry_data/: index.db
roadmap/: index.html
scripts/: pre_commit_tests.sh  test_release.sh
sdk/: pyproject.toml
sdk/src/aps_sdk/: agent.py
sdk/src/aps_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
search/: search_index.json
security-provenance/: index.html
security/provenance/: index.html
security/signing/: index.html
security/signing-model/: index.html
site/: 404.html  index.html  sitemap.xml
site/APS_EXECUTION_ENV/: index.html
site/RUNTIME_EXTENSIONS/: index.html
site/SECURITY/provenance/: index.html
site/architecture/: index.html
site/cli-dev/: index.html
site/contributing/: index.html
site/dev-setup/: index.html
site/examples/: index.html
site/faq/: index.html
site/getting-started/: index.html
site/hacking-guide/: index.html
site/publish/: index.html
site/registry/: index.html  openapi.yaml
site/registry-dev/: index.html
site/roadmap/: index.html
site/search/: search_index.json
site/security-provenance/: index.html
site/specs/: registry-openapi.yaml
site/testing/: index.html
specs/: APS-v0.1.md
specs/APS-v0.1/: index.html
specs/errors/: index.html
specs/runtime/: index.html
specs/streaming/: index.html
standards/agent-card-template/: index.html
standards/governance/: index.html
standards/mapping/: index.html
standards/stack/: index.html
testing/: index.html
(+17 files in other folders)
