[project]
name = "apstool"
version = "0.1.9"
description = "Command-line tool for the Agent Packaging Standard (APS)"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  {name = "Veda Hegde", email = "vedahegde60@gmail.com"}
]
keywords = ["ai", "agents", "packaging", "aps", "agent-packaging-standard", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "pyyaml>=6.0.1",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "scikit-learn>=1.3",
  "cryptography>=41.0",
]

[project.urls]
Homepage = "https://agentpackaging.org"
Documentation = "https://agentpackaging.org"
Repository = "https://github.com/vedahegde60/agent-packaging-standard"
Issues = "https://github.com/vedahegde60/agent-packaging-standard/issues"

[project.scripts]
aps = "aps_cli.app:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aps_cli = ["templates/**/*", "templates/**/**/*"]
