[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aps-sdk"
version = "0.1.0"
description = "APS SDK: helpers for building APS-compatible agents"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "APS Contributors" }]
keywords = ["APS", "agents", "packaging", "sdk"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]

dependencies = [
  # keep SDK light; pure stdlib by default
]

[project.urls]
Homepage = "https://github.com/vedahegde60/agent-packaging-standard"
Repository = "https://github.com/vedahegde60/agent-packaging-standard"

[tool.setuptools.packages.find]
where = ["src"]
include = ["aps_sdk*"]

[tool.setuptools]
package-dir = {"" = "src"}

